# OOP-Homeworks

./: readme.md
01_cmake/: 01_cmake.cbp  CMakeCache.txt  CMakeLists.txt  Dummy.h  Makefile  cmake_install.cmake  main.cpp  test.cpp
01_cmake/src/: Dummy.cpp
01_cmake/test/: CMakeLists.txt
02_tdd/include/: TextWrapper.h
02_tdd/src/: TextWrapper.cpp  main.cpp
02_tdd/test/: CMakeLists.txt
05_stl_benchmark/bench/: CMakeLists.txt
05_stl_benchmark/include/: Large.h  Medium.h  Small.h
05_stl_benchmark/output/: ForwardList.txt  Map.txt  UnorderedMap.txt
05_stl_benchmark/src/: main.cpp
08_fake_mock_or_stub/: CMakeLists.txt
08_fake_mock_or_stub/include/: Observer.h  ObserverImpl.h  Space.h  SpaceImpl.h  Time.h  TimeImpl.h
08_fake_mock_or_stub/src/: Space.cpp  Time.cpp  TimeImpl.cpp  Universe.cpp
08_fake_mock_or_stub/test/: CMakeLists.txt
10_state_machine/: main.cpp  mainwindow.cpp
12_qt_test/tests/: tests.pro
12_qt_test/utils/: acceleration.h  demo.cpp  demo.h  displacement.h  speed.h  utils.pro
DisSpeedAcc/: acceleration.cpp  acceleration.h  displacement.cpp  main.cpp  main.qml  speed.cpp
DisSpeedAccQML/: DisSpeedAcc.pro  displacement.h  main.cpp  main.qml  speed.h
FirstGUI/FirstGUI/: FirstGUI.pro  acceleration.cpp  acceleration.h  displacement.cpp  main.cpp  (+5 more)
QtQuickDemo/: QtQuickDemo.pro  acceleration.cpp  acceleration.h  demo.cpp  demo.h  displacement.cpp  displacement.h  main.cpp  main.qml  speed.cpp  speed.h
build-DisSpeedAcc-Desktop-Debug/: DisSpeedAcc  Makefile  moc_acceleration.cpp  moc_displacement.cpp  moc_speed.cpp  qrc_qml.cpp
(+36 files in other folders)
